[package]
name = "rust-8"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arr_macro = "0.1.3"
rand = "0.8.4"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","mixer"]

[dev-dependencies]
rand = "0.8.0"
